syntax = "proto3";

//protoc --go_out=plugins=grpc:. integral.proto
message IntegralRequest {
    int32 userId = 1;
    int64 integral = 2; // (add or consume) integral
}
message IntegralResponse{
    int32 userId = 1;
    int64 integral = 2;//cur integral
}
message FindIntegralRequest{
    int32 userId = 1;
}
service IntegralRpc{
    rpc AddIntegral (IntegralRequest) returns(IntegralResponse);
    rpc ConsumeIntegral (IntegralRequest) returns(IntegralResponse);
    rpc FindIntegralByUserid (FindIntegralRequest) returns(IntegralResponse);
}